name:                hspm
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/delearyus/hspm#readme
license:             BSD3
license-file:        LICENSE
author:              Jamie Leary
maintainer:          jmleary@willamette.edu
copyright:           2018 Jamie Leary
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable hspm
  hs-source-dirs:      src
  main-is:             Main.hs
  other-modules:       Core, Types, Actions
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , unix
                     , mtl
                     , binary
                     , directory
                     , process
                     , lens
                     , editor-open
